--- a/astrogrid/ogsa/ag-ogsa-echo/project.properties
+++ b/astrogrid/ogsa/ag-ogsa-echo/project.properties
@@ -1,3 +1,4 @@
 maven.repo.remote=http://astrogrid.ast.cam.ac.uk/maven,http://www.ibiblio.org/maven
 maven.build.dest=build
-
+maven.jarResources.basedir=build/classes
+maven.jarResources.basedir="build/resources"/>
