*** empty log message ***

--- a/astrogrid/workflow/config/ASTROGRID_workflowmessages.properties
+++ b/astrogrid/workflow/config/ASTROGRID_workflowmessages.properties
@@ -5,15 +5,15 @@
 #     <<<particularly>>> after a line-end continuation character.                #
 #     e.g. there must be no white space after a backslash continuation...        #
 #                                                                                #
-#     AGWKFZ00002=AGWKFZ00002:DatasetAgent: \                                    #
+#     AGWKFZ00002=AGWKFZ00002:Workflow: \                                        #
 #     Not initialized. Perhaps my configuration file is missing.                 #
-#                                                                                 #
+#                                                                                #
 #     YOU HAVE BEEN WARNED!                                                      #
 ##################################################################################
 # This first entry is control information. Please do not alter or remove...
 SUBSYSTEM=WKF
 #
-# Messages issued by the datacenter components.
+# Messages issued by the workflow components.
 #
 # Format of the message key: AGWKFEnnnnn
 # AG       AstroGrid
@@ -22,7 +22,7 @@ SUBSYSTEM=WKF
 # nnnnn    unique message number (in effect this can be of any length, but see notes below)
 #
 # Format of the message body:
-# <datacenter-component-name>: <rest-of-message>
+# <workflow-component-name>: <rest-of-message>
 # See documentation for java.text.MessageFormat class for inserts into messages (e.g. {0})
 #
 # Note. Messages in the range 00001-99999 are reserved to development by org.astrogrid
@@ -66,4 +66,10 @@ AGWKFZ00005=AGWKFZ00005:AstroGridMessage: Message not found in ResourceBundle
 #AGWKFZ00019=AGWKFZ00019:AstroGridMessage: Reserved
 #AGWKFZ00020=AGWKFZ00020:AstroGridMessage: Reserved
 
-AGWKFE00030=:{0}: Some text here. Could not create something from something.
+AGWKFE00050=:{0}: Permission for editing Workflows denied. Reason: [{1}]
+AGWKFE00060=:{0}: Permission for editing Jobs denied. Reason: [{1}]
+#
+# AGWKFE00100 is a pass-through message used for picking up and displaying
+# message content that at present does not conform to the AstroGrid message format.
+# The generating component is displayed in {0} and the content in {1}
+AGWKFE00100=:{0}: {1}
