--- a/astrogrid/ogsa/ag-ogsa-echo/config/build.properties
+++ b/astrogrid/ogsa/ag-ogsa-echo/config/build.properties
@@ -1,3 +1,3 @@
-ogsi.home=/data/cass123a/gtr/ogsa-3.0
+ogsi.home=/data/cass123a/kea/ogsa-3.0
 tomcat.home=/data/cass123a/kea/jakarta-tomcat-4.1.24
-ogsi.schema.context=ogsa
+ogsi.schema.context=ROOT
