*** empty log message ***

--- a/astrogrid/jes/config/ASTROGRID_jesmessages.properties
+++ b/astrogrid/jes/config/ASTROGRID_jesmessages.properties
@@ -88,3 +88,10 @@ AGJESE00810=:{0}: Multiple rows encountered on table {1}. This should contain a 
 AGJESE00820=:{0}: Unexpected SQL error on table {1}.
 
 AGJESE00830=:{0}: Request for Job list for user {1} community {2} ultimately failed. See previous messages.
+
+AGJESE01000=:{0}: Permission for editing Jobs denied. Reason: [{1}]
+#
+# AGJESE01010 is a pass-through message used for picking up and displaying
+# message content that at present does not conform to the AstroGrid message format.
+# The generating component is displayed in {0} and the content in {1}
+AGJESE01010=:{0}: {1}
