--- a/astrogrid/community/build.xml
+++ b/astrogrid/community/build.xml
@@ -2,10 +2,13 @@
 <!--+
     | <cvs:source>$Source: /Users/pharriso/Work/ag/repo/git/astrogrid-mirror/astrogrid/community/Attic/build.xml,v $</cvs:source>
     | <cvs:author>$Author: dave $</cvs:author>
-    | <cvs:date>$Date: 2003/09/22 13:48:04 $</cvs:date>
-    | <cvs:version>$Revision: 1.41 $</cvs:version>
+    | <cvs:date>$Date: 2003/09/24 15:47:37 $</cvs:date>
+    | <cvs:version>$Revision: 1.42 $</cvs:version>
     | <cvs:log>
     |   $Log: build.xml,v $
+    |   Revision 1.42  2003/09/24 15:47:37  dave
+    |   Added policy database loader tools.
+    |
     |   Revision 1.41  2003/09/22 13:48:04  dave
     |   Updates to the community/portal build
     |
@@ -1268,9 +1271,6 @@
 		<!-- The JConfig libraries -->
 		<path refid="jconfig.classpath"/>
 
-		<!-- ZRQ : The XMLToolKit libraries -->
-		<path refid="xmltool.classpath"/>
-
 		<!-- Our policy jar -->
 		<pathelement path="${policy.base}/jar/${policy.server.jar}"/>
 		<!-- Our authentication jar -->
@@ -1552,7 +1552,7 @@
 				<!-- Include our JUnit tests -->
 				<include name="org/astrogrid/community/policy/server/junit/**"/>
 
-				<!-- ZRQ : Include the policy loader classes -->
+				<!-- Include the policy loader classes -->
 				<include name="org/astrogrid/community/policy/loader/**"/>
 
 			<!--+
@@ -1649,7 +1649,6 @@
 			<include name="org/astrogrid/community/common/**"/>
 			<include name="org/astrogrid/community/policy/data/**"/>
 			<include name="org/astrogrid/community/policy/server/**"/>
-			<!-- ZRQ -->
 			<include name="org/astrogrid/community/policy/loader/**"/>
 			<!--+
 				| PATCH : Include the authentication data objects
@@ -1670,9 +1669,6 @@
 				<path refid="jconfig.classpath"/>
 				<!-- include the myspace libraries of the delegate -->
 				<path refid="myspace.classpath"/>
-
-				<!-- ZRQ : The XMLToolKit libraries -->
-				<path refid="xmltool.classpath"/>
 
 			</classpath>
 		</javac>
@@ -2119,6 +2115,64 @@
 		<antcall target="policy.remote.junit"/>
 		<!-- Display our database -->
 		<antcall target="hsqldb.database.select"/>
+	</target>
+
+	<!-- ================ Database loader tasks ================ -->
+	<!--+
+	    | The Policy data location.
+	    +-->
+	<property name="policy.xml.test" value="src/xml/policy/test"/>
+	<property name="policy.xml.data" value="src/xml/policy/data"/>
+
+	<!--+
+		| Run our database loader JUnit tests.
+		+-->
+	<target name="policy.loader.junit" depends="">
+		<!-- Create our reports directory -->
+		<mkdir dir="${policy.base}/junit"/>
+		<!-- Run our JUnitTestCase tests -->
+		<junit printsummary="yes" haltonfailure="true" haltonerror="true" showoutput="true" fork="true">
+			<classpath>
+				<!-- The Policy classes -->
+				<path refid="policy.server.classpath"/>
+			</classpath>
+			<!-- Generate an XML log file -->
+			<formatter type="xml"/>
+			<!-- Pass in the location of the config file -->
+			<sysproperty key="org.astrogrid.community.config" value="${config.file}"/>
+			<!-- Pass in the location of the test data -->
+			<sysproperty key="org.astrogrid.community.data" value="${policy.xml.test}"/>
+			<!-- Run the target JUnitTestCase tests -->
+			<batchtest todir="${policy.base}/junit">
+				<fileset dir="${policy.server.base}/classes">
+					<include name="org/astrogrid/community/policy/loader/junit/JUnit*.class"/>
+				</fileset>
+			</batchtest>
+		</junit>
+	</target>
+
+	<!--+
+	    | Run our policy loader task.
+	    +-->
+	<target name="policy.loader" depends="">
+		<echo message=""/>
+		<echo message="Loading policy data ...."/>
+		<echo message="  Community name : ${community.name}"/>
+		<!-- Define our policy-loader task -->
+		<taskdef name="policy.loader" classname="org.astrogrid.community.policy.loader.PolicyLoader">
+			<classpath>
+				<!-- The Axis libraries -->
+				<path refid="axis.classpath"/>
+				<!-- Our policy jar -->
+				<pathelement path="${policy.base}/jar/${policy.server.jar}"/>
+			</classpath>
+		</taskdef>
+		<!-- Process our data files -->
+		<policy.loader>
+			<fileset dir="${policy.xml.data}">
+				<include name="${community.name}.xml"/>
+			</fileset>
+		</policy.loader>
 	</target>
 
 <!--
@@ -3194,7 +3248,6 @@ database.user=sa
 		     <include name="org/astrogrid/community/**"/>
 		       <exclude name="org/astrogrid/community/policy/client/**"/>
 		       <exclude name="org/astrogrid/community/policy/server/**"/>
-				<!-- ZRQ -->
 		       <exclude name="org/astrogrid/community/policy/loader/**"/>
 		       <exclude name="org/astrogrid/community/auth/**"/>
 		       <exclude name="org/astrogrid/community/delegate/policy/**"/> 
@@ -3544,114 +3597,22 @@ To repeat
 		|
 		+-->
 
-	<!-- ================ XML ToolKit tasks ================ -->
-	<!--+
-		| XML ToolKit properties.
-		+-->
-	<property name="xmltool.jar"  value="xmltoolkit-0.2.jar"/>
-	<property name="xmltool.src"  value="${basedir}/depends/xmltool/${xmltool.jar}"/>
-	<property name="xmltool.base" value="${basedir}/build/xmltool"/>
 
 	<!--+
-		| The XML ToolKit classpath.
-		+-->
-	<path id="xmltool.classpath">
-		<pathelement location="${xmltool.base}/${xmltool.jar}"/>
-	</path>
-
-	<!--+
-		| Delete the XML ToolKit directory.
-		+-->
-	<target name="xmltool.delete" depends="">
-		<delete dir="${xmltool.base}" failonerror="false"/>
-	</target>
-
-	<!--+
-		| Copy the XML ToolKit jar.
-		+-->
-	<target name="xmltool.copy" depends="">
-		<mkdir dir="${xmltool.base}"/>
-		<copy verbose="true" file="${xmltool.src}" toFile="${xmltool.base}/${xmltool.jar}"/>
-	</target>
-
-	<!--+
-		| Install the XML ToolKit jar.
-		+-->
-	<target name="xmltool.INSTALL" depends="">
-		<antcall target="xmltool.copy"/>
-	</target>
-
-	<!--+
-		| Prepare the XML ToolKit.
-		+-->
-	<target name="xmltool.PREPARE" depends="">
-	</target>
-
-	<!-- ================ Database loader tasks ================ -->
-	<!--+
-	    | These will be moved into the main policy or community build once I have the XML loader working.
-	    | While I'm working on this I've added some temp patches to some of the other tasks, look for ZRQ in the comments.
-	    +-->
-	<!--+
-	    | ZRQ : Policy test data.
-	    +-->
-	<property name="policy.data" value="${policy.base}/data"/>
-
-	<!--+
-	    | ZRQ : Copy our test data.
-	    +-->
-	<target name="policy.loader.data" depends="">
-		<mkdir dir="${policy.data}"/>
-		<copy verbose="true" todir="${policy.data}">
-			<fileset dir="src/xml/data">
-				<include name="**/**.xml"/>
-			</fileset>
-		</copy>
-	</target>
-
-	<!--+
-		| ZRQ : Run our database loader JUnit tests.
-		+-->
-	<target name="policy.loader.junit" depends="">
-		<!-- Create our reports directory -->
-		<mkdir dir="${policy.base}/junit"/>
-		<!-- Run our JUnitTestCase tests -->
-		<junit printsummary="yes" haltonfailure="true" haltonerror="true" showoutput="true" fork="true">
-			<classpath>
-				<!-- The Policy classes -->
-				<path refid="policy.server.classpath"/>
-			</classpath>
-			<!-- Generate an XML log file -->
-			<formatter type="xml"/>
-			<!-- Pass in the location of the config file -->
-			<sysproperty key="org.astrogrid.community.config" value="${config.file}"/>
-			<!-- Pass in the location of the test data -->
-			<sysproperty key="org.astrogrid.community.data" value="${policy.data}"/>
-			<!-- Run the target JUnitTestCase tests -->
-			<batchtest todir="${policy.base}/junit">
-				<fileset dir="${policy.server.base}/classes">
-					<include name="org/astrogrid/community/policy/loader/junit/JUnit*.class"/>
-				</fileset>
-			</batchtest>
-		</junit>
-	</target>
-
-	<!--+
-	    | ZRQ : Quick re-test for the database load
+	    | Quick re-test for the database load
 	    +-->
 	<target name="policy.LOAD-TEST" depends="">
-		<!-- Install the xmltool library -->
-		<antcall target="xmltool.INSTALL"/>
 		<!-- Build our server code -->
 		<antcall target="policy.server.prepare"/>
 		<antcall target="policy.server.javac"/>
 		<antcall target="policy.server.jar"/>
-		<!-- Reset our database -->
-		<antcall target="hsqldb.database.delete"/>
 		<!-- Copy our test data -->
 		<antcall target="policy.loader.data"/>
 		<!-- Run our loader tests -->
-		<antcall target="policy.loader.junit"/>
+		<!-- <antcall target="policy.loader.junit"/> -->
+		<antcall target="policy.loader"/>
+		<!-- Display our database contents -->
+		<antcall target="hsqldb.database.select"/>
 	</target>
 
 </project>
