Added invocation of the permissions server to the MySpace Manager.  Most of the changes were to the UserAccount and MySpaceActions classes.  A fake PolicyServiceDelegate was also provided.

--- a/astrogrid/mySpace/src/java/org/astrogrid/mySpace/mySpaceStatus/statuscodes.properties
+++ b/astrogrid/mySpace/src/java/org/astrogrid/mySpace/mySpaceStatus/statuscodes.properties
@@ -13,7 +13,9 @@ AGMMCZ00005=AGDTCZ00005:Message: Message not found in ResourceBundle
 #MS_E_CODEOUT=
 AGMMCE00030=({0}) Error writing error codes to standard output.
 #MS_E_REGDCPT=Class not found.
-AGMMCE00031=({0})  Class not found.
+AGMMCE00031=({0}) Class not found.
+
+AGMMCE00050=({0}) User is not authorised for operation attempted.
 
 #
 # Error codes for the mySpace registry.
@@ -99,6 +101,7 @@ AGMMCE00221=({0}) Failed to delete user.
 
 #MS_I_NDHMTCH=No Data Holders matched query string.
 AGMMCI00250=({0}) No Data Holders matched query string.
+
 
 #
 # Codes to do with servers.
